# uni-project-cpu

./: .gitignore  README.md
assembler/: Cargo.toml  a.out
assembler/examples/: basic_macro.S  counting.s  duplicate.s  fib-iter.mif  fib-iter.s  fib-recursive.s  fib.s  invalid_macro.s  invalid_param.s  macro-labels.s  recursive.s  simple.s  squared.mif  squared.s  std.s  test.S  test.s
assembler/src/: asm.rs  ast.rs  disasm.rs  expand.rs  expander.rs  grammar.lalrpop  lexer.rs  main.rs  util.rs
assembler/src/parser/: ast.rs  grammar.lalrpop  mod.rs
emulator/: Cargo.toml
emulator/src/: cli.rs  cpu.rs  isa.rs  main.rs
hardware/: Makefile  alutest  extest  idtest  instftest  memtest  proctest  prozessor  prozessortest  ram_tb  registerbanktest  rom_tb  wbtest
hardware/code/: Prozessor.vhd  ProzessorTest.vhd  ram_tb.vhd  reg.vhd
hardware/code/1_Instruction_Fetch/: IFTest.vhd  instF.vhd  instFTest.vhd
hardware/code/2_Instruction_Decode/: ID.vhd  IDTest.vhd  funct_codes.vhd  opcodes.vhd  registerbank.vhd  (+1 more)
hardware/de0-mikrorechner/: Makefile  README.txt  de0Board.ipregen.rpt  de0Board.qsf  de0Board.sdc  de0Board.vhd  de0Board_assignment_defaults.qdf
hardware/de0-tlc/: Makefile  README.txt  de0Board.qsf  quartus2.ini
hardware/de0Board/: Makefile  README.txt  de0Board.qpf  de0Board.qsf  de0Board.vhd
hardware/de0cDisplay/: Makefile  README.txt  de0Board.qsf  de0Board.sdc  de0Board.vhd
hardware/de0serIO/: Makefile  README.txt  de0Board.qsf  quartus2.ini
hardware/memory/: ram10x32.vhd  rom10x32.cmp  rom10x32.vhd
hardware/references/: README.txt
(+266 files in other folders)
